# Skeleton

./: test1.sh
S0017D/Fork&Thread/ThreadedLinuxApp/: CMakeLists.txt  main.cpp
engine/render/: window.h
exts/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  stb_truetype.h
projects/ImGuiExample/code/: exampleapp.cc
projects/assignment-1/code/: CMakeLists.txt  MathLib.h  camera.h  dielectric.h  exampleapp.cc  exampleapp.h  hitable.h  hitable_list.h  lambertian.h  main.cc  main.cpp  material.h  metal.h  ray.h  sphere.h
projects/assignment-2/: CMakeLists.txt
projects/assignment-2/code/: textureresource.cpp  textureresource.h
projects/assignment-3/: CMakeLists.txt
projects/assignment-3/code/: MathLib.cpp  MathLib.h  copyright.copyright  exampleapp.cc  exampleapp.cpp  exampleapp.h  main.cpp  meshresource.cpp  meshresource.h  temp.temp  textureresource.cpp
projects/assignment-4/: CMakeLists.txt
projects/assignment-4/code/: Camera.h  GraphicsNode.h  MathLib.cpp  MathLib.h  ShaderObject.h  exampleapp.cc  exampleapp.h  meshresource.h  textureresource.h
projects/assignment-4/code/Shaders/: fs.shader  vs.shader
projects/assignment-5/: CMakeLists.txt
projects/assignment-5/code/: Camera.h  MathLib.cpp  MathLib.h  ShaderObject.h  Skeleton.h  exampleapp.cc  exampleapp.h  light.h  meshresource.h  textureresource.h
projects/assignment-6/: CMakeLists.txt
projects/assignment-6/code/: GraphicsNode.h  MathLib.cpp  exampleapp.cc  exampleapp.h  light.h  main.cc  meshresource.h  software renderer.h
projects/assignment-6/code/Shaders/: fs.shader  vs.shader
projects/example/code/: exampleapp.cc
